# deepsensor

./: .all-contributorsrc  .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  contact.html  genindex.html  index.html  interface.ipynb  objects.inv  pipeline.ipynb  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.txt  research_ideas.html  resources.html  search.html  searchindex.js  setup.cfg  setup.py  task_loader_tour.ipynb  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  config.yml
.github/workflows/: docs.yml  publish.yml  style.yml  tests.yml
_docs/: conf.py  index.rst
_docs/community/: code-of-conduct.rst  faq.rst
_docs/getting-started/: extending.rst  index.rst
_docs/getting-started/tutorials/: index.rst  quickstart.ipynb
_docs/reference/: plot.rst
_docs/reference/active_learning/: algorithms.rst  index.rst
_docs/reference/data/: index.rst  task.rst
_docs/reference/model/: model.rst
_docs/reference/tensorflow/: index.rst
_docs/reference/train/: index.rst
_modules/: index.html
_modules/deepsensor/: plot.html
_modules/deepsensor/active_learning/: acquisition_fns.html  algorithms.html
_modules/deepsensor/data/: loader.html  processor.html  sources.html  task.html  utils.html
_modules/deepsensor/model/: convnp.html  defaults.html  model.html  nps.html  pred.html
_modules/deepsensor/train/: train.html
_sources/: contact.md  index.md  research_ideas.md  resources.md
_sources/community/: faq.md  roadmap.md
_sources/getting-started/: installation.md  overview.md
_sources/reference/: index.md
_sources/reference/active_learning/: acquisition_fns.rst  algorithms.rst  index.md
_sources/reference/data/: processor.rst  sources.rst  task.rst  utils.rst
_sources/reference/model/: convnp.rst  model.rst  pred.rst
_sources/reference/train/: train.rst
_sources/user-guide/: convnp.ipynb  data_processor.ipynb  prediction.ipynb  task.ipynb  task_loader.ipynb  training.ipynb
community/: code_of_conduct.html  contributing.html  faq.html  index.html  roadmap.html
deepsensor/: __init__.py  _version.py  config.py  errors.py  plot.py
deepsensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deepsensor/active_learning/: __init__.py  acquisition_fns.py  algorithms.py
deepsensor/data/: __init__.py  loader.py  processor.py  sources.py  task.py  utils.py
deepsensor/eval/: metrics.py
deepsensor/model/: __init__.py  convnp.py  defaults.py  model.py  models.py  nps.py  pred.py
deepsensor/plot/: utils.py
deepsensor/tensorflow/: __init__.py
deepsensor/torch/: __init__.py
deepsensor/train/: train.py
docs/: _config.yml  _toc.yml  conf.py  contact.md  contact.rst  index.md  index.rst  references.bib  research_ideas.md
docs/community/: code-of-conduct.md  code-of-conduct.rst  contributing.md  contributing.rst  faq.md  index.md  index.rst  roadmap.md  roadmap.rst
docs/getting-started/: data_requirements.ipynb  extending.md  index.md  index.rst  installation.md  installation.rst  overview.md
docs/getting-started/tutorials/: quickstart.ipynb  quickstart.rst
docs/reference/: index.rst  plot.rst
docs/reference/active_learning/: acquisition_fns.rst  algorithms.rst  index.md
docs/user-guide/: acquisition_functions.ipynb  active_learning.ipynb  convnp.ipynb  data_processor.ipynb  deepsensor_design.md  extending.ipynb  index.md  patchwise_training.ipynb  patchwise_training.py  patchwise_training_and_prediction.ipynb  prediction.ipynb  task.ipynb  task_loader.ipynb  training.ipynb
getting-started/: data_requirements.html  index.html  installation.html  overview.html
notebooks/: acquisition_functions.ipynb  active_learning.ipynb  ar_sampling.ipynb  around_deepsensor_in_80_lines.ipynb  extending_models.ipynb  interface.ipynb  multi_output_training.ipynb  pipeline.ipynb  plotting.ipynb  quickstart_example.ipynb  task_loader_tour.ipynb
reference/: index.html  plot.html
reference/active_learning/: acquisition_fns.html  algorithms.html  index.html
reference/data/: index.html  loader.html  processor.html  sources.html  task.html  utils.html
reference/model/: convnp.html  defaults.html  index.html  model.html  nps.html  pred.html
reference/train/: index.html  train.html
requirements/: requirements.dev.txt  requirements.docs.txt  requirements.txt
tests/: test_active_learning.py  test_data_processor.py  test_model.py  test_plotting.py  test_task.py  test_task_loader.py  test_training.py  utils.py
user-guide/: acquisition_functions.html  active_learning.html  convnp.html  data_processor.html  deepsensor_design.html  extending.html  index.html  prediction.html  task.html  task_loader.html  training.html
(+17 files in other folders)
