[metadata]
name = deepsensor
author = Tom R. Andersson
author_email = tomand@bas.ac.uk
description = A Python package for modelling xarray and pandas data with neural processes.
url = https://github.com/tom-andersson/deepsensor
license = MIT
license_file = LICENCE.txt
platforms = unix, linux, osx
long_description = file: README.md
long_description_content_type = text/markdown
packages =
    deepsensor
package_dir =
    =deepsensor

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    tox

[options.package_data]
deepsensor = py.typed