[metadata]
name = deepsensor
version = 0.3.8
author = Tom R. Andersson
author_email = tomandersson3@gmail.com
description = A Python package for modelling xarray and pandas data with neural processes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alan-turing-institute/deepsensor
license = MIT
license_files = LICENCE.txt
platforms = unix, linux, osx

packages =
    deepsensor
package_dir =
    =deepsensor


[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    neuralprocesses
    backends-matrix
    backends
    numpy
    pandas
    xarray
    dask
    distributed
    pyshp
    tqdm
    seaborn
    pooch
    gcsfs
    zarr

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    tox

[options.package_data]
deepsensor = py.typed
